[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Fonts/Kenney Future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI & Menus/gameplay_theme.tres" type="Theme" id=2]
[ext_resource path="res://Assets/UI/panel_blue.png" type="Texture" id=3]
[ext_resource path="res://UI & Menus/PauseMenu.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Popup"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
popup_exclusive = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1712.0
margin_top = -1003.0
margin_right = 1890.0
margin_bottom = 1106.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -162.5
margin_right = 125.0
margin_bottom = 162.5
rect_min_size = Vector2( 250, 325 )
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
custom_constants/separation = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_right = 210.0
margin_bottom = 35.0
theme = ExtResource( 2 )
text = "Options"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterVolume" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 42.0
margin_right = 210.0
margin_bottom = 60.0
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Master Volume"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MasterSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 67.0
margin_right = 210.0
margin_bottom = 83.0
min_value = -40.0
max_value = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 90.0
margin_right = 210.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 1 )
text = "Music"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 115.0
margin_right = 210.0
margin_bottom = 131.0
min_value = -40.0
max_value = 0.0
step = 0.0
value = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffects" type="Label" parent="NinePatchRect/VBoxContainer"]
margin_top = 138.0
margin_right = 210.0
margin_bottom = 156.0
custom_fonts/font = SubResource( 1 )
text = "Sound Effects"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffectsSlider" type="HSlider" parent="NinePatchRect/VBoxContainer"]
margin_top = 163.0
margin_right = 210.0
margin_bottom = 179.0
min_value = -40.0
max_value = 0.0
step = 0.0
value = -40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 186.0
margin_right = 210.0
margin_bottom = 210.0
alignment = 1

[node name="FullScreen" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 26.0
margin_top = 3.0
margin_right = 156.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Fullscreen"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenButton" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer"]
margin_left = 160.0
margin_right = 184.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="NinePatchRect/VBoxContainer"]
margin_top = 217.0
margin_right = 210.0
margin_bottom = 241.0
alignment = 1

[node name="Particles" type="Label" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 36.0
margin_top = 3.0
margin_right = 145.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "Particles"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ParticlesButton" type="CheckBox" parent="NinePatchRect/VBoxContainer/HBoxContainer2"]
margin_left = 149.0
margin_right = 173.0
margin_bottom = 24.0

[node name="BackButton" type="Button" parent="NinePatchRect/VBoxContainer"]
margin_top = 248.0
margin_right = 210.0
margin_bottom = 291.0
theme = ExtResource( 2 )
text = "Back"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -200.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = 50.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = -20.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
theme = ExtResource( 2 )
text = "Main Menu"

[connection signal="value_changed" from="NinePatchRect/VBoxContainer/MasterSlider" to="." method="_on_MasterSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="NinePatchRect/VBoxContainer/SoundEffectsSlider" to="." method="_on_SoundEffectsSlider_value_changed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/HBoxContainer2/ParticlesButton" to="." method="_on_ParticlesButton_pressed"]
[connection signal="pressed" from="NinePatchRect/VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_Button_pressed"]
